# mlops-next-watch

./: .env  .gitignore  Makefile  README.md  docker-compose.old.yml  docker-compose.yml  edit-docker-compose.yml  logging.config  pyproject.toml  requirements.dist  requirements.minimal  requirements.txt  teste.py  tox.ini
.dvc/: config
.github/workflows/: behavioral_tests.yml
airflow/: airflow.cfg
airflow/dags/: collab_inference_dag.py  collab_training_dag.py
docker/airflow/: Dockerfile  requirements.txt
docker/dev-spark/: Dockerfile
docker/frontend/: Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit
docker/grafana/: dashboards.yml  drift_dashboard.json  fastapi_dashboard.json
docker/kafka-pred-consumer/: Dockerfile
docker/mlflow/: Dockerfile  requirements.txt
docker/prometheus/: alert_rules.yml  prometheus.yml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Untitled.ipynb  eda_with_spark.ipynb  ml-playground.ipynb  ml_modelling_with_spark.ipynb  proj-experiment.ipynb
requirements/: development.txt  local.txt  minimal.txt
src/: create_aws_credentials_file.py  main.py  populate_db_with_users.py  settings.py  teste.py
src/conf/: catalog.py  globals.py  params.py  paths.py
src/frontend/: api.py  app.py
src/pipelines/: __init__.py  inference.py  monitoring.py  training.py
src/scripts/: create_aws_credentials_file.py  ka.py  kc.py  kp.py  populate_db_with_users.py
src/services/: mlflow.py  prometheus.py
src/utils/: experiment_tracking.py  pandas.py  psycopg_handler.py
tests/: conftest.py
tests/models/: conftest.py  (+2 more)
(+23 files in other folders)
